Tables update and more
